--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,42 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    font-family: Roboto;
+    color: #202020;
+}
+
+.content_link-creator {
+    margin-top:30px;
+    position: relative;
+}
+
+.content-header {
+    font-size: 24px;
+    margin-bottom:30px;
+    font-weight: bold;
+}
+
+.app-error {
+    text-align: center;
+    color:lightcoral;
+    position: absolute;
+    right: 110px;
+    top: 50px;
+}
+
+.link-creator_submit {
+    margin-left:20px;
+    width: 120px;
+    height: 30px;
+    border:none;
+    border-radius: 5px;
+    background: #21c2f8;
+    font-size: 18px;
+}
+
+.link-creator_input {
+    height:16px;
+    padding: 5px;
 }
 
 .main-content {
@@ -10,7 +46,41 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
-    width: 50%;
-    height:70%;
+    width: 80%;
+    height:80%;
+    position: relative;
+    border-radius: 15px;
+    background: #f3f7f8;
+    border: 1px solid lightgray;
+}
+
+.exit {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    height: 30px;
+    width:60px;
+    background: lightcoral;
+    border: none;
+}
+
+.exit:hover {
+    cursor: pointer;
+}
+
+.table-holder {
+    width:100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.pagination {
+    margin-top:30px;
+}
+
+@media (max-width: 1200px) {
+    .main-content {
+        width: 100%;
+    }
 }
