--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -10,7 +10,7 @@ table {
     width:95%;
     height: 400px;
     table-layout: fixed;
-
+    position: relative;
 }
 
 .table-div {
@@ -61,6 +61,13 @@ thead {
 
 .table-link:hover {
     color:#21c2f8;
+}
+
+tfoot {
+    position: absolute;
+    left: 50%;
+    font-size:20px;
+    bottom: -5px;
 }
 
 @media (max-width: 1050px) {
