--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,23 @@
     font-size: 18px;
 }
 
+.exit:active {
+    background: coral;
+}
+
+.link-creator_submit:hover {
+    cursor: pointer;
+}
+
+.link-creator_submit:active {
+    background: #227ebb;
+}
+
 .link-creator_input {
-    height:16px;
+    height:18px;
     padding: 5px;
+    border-radius: 5px;
+    border: 1px solid gray
 }
 
 .main-content {
@@ -63,6 +77,7 @@
     width:60px;
     background: lightcoral;
     border: none;
+    border-radius: 5px;
 }
 
 .exit:hover {
