--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -70,9 +70,9 @@ thead {
 
 tfoot {
     position: absolute;
-    left: 50%;
+    left: 47.5%;
     font-size:20px;
-    bottom: -5px;
+    bottom: -25px
 }
 
 @media (max-width: 1050px) {
